<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarAddEditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_car_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                app:boxStrokeColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_car_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="@string/enter_current_mileage"
                    android:gravity="center_horizontal"
                    android:hint="@string/enter_car_name"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="20sp" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_car_make"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ti_car_name"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                app:boxStrokeColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_car_make"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="@string/enter_current_mileage"
                    android:gravity="center_horizontal"
                    android:hint="@string/enter_car_make"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="20sp" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_car_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ti_car_make"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                app:boxStrokeColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_car_model"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="@string/enter_current_mileage"
                    android:gravity="center_horizontal"
                    android:hint="@string/enter_car_model"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="20sp" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_lease_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ti_car_model"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                app:boxStrokeColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_lease_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_calendar_green"
                    android:drawableRight="@drawable/ic_calendar_green"
                    android:gravity="center"
                    android:hint="@string/enter_lease_start_date"
                    android:textSize="20sp"
                    android:inputType="none"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_staring_mileage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ti_lease_start"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                app:boxStrokeColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_starting_mileage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/enter_starting_mileage"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textSize="20sp" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_annual_mileage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ti_staring_mileage"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                app:boxStrokeColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_annual_mileage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/mileage_allowance"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>